[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tune-tile-press"
authors = [
    { name = "tune-tile-press", email = "coding@fritze.me" }
]
description = "One-liner to describe the package"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.14"
dependencies = [
    "rich",
    "packaging",
    "typer"
]

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[dependency-groups]
docs = [
    "sphinx>=6",
    "sphinx-autoapi>=3",
    "myst-nb>=0.18",
    "furo>=2023.9.10"
]
dev = [
    "build",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-datadir",
]

[project.urls]
Documentation = "https://github.com/renefritze/tune-tile-press"
Source = "https://github.com/renefritze/tune-tile-press"

[tool.ruff]
target-version = "py314"
select = ["ALL"]
extend-ignore = ["E501", "ANN201", "ANN001", "D211", "D213"]
extend-exclude = ["_version.py", "docs/*.py"]
fix = true
line-length = 120

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101", "D103"]

[tool.pytest.ini_options]
addopts = "--cov=tune_tile_press --cov-report=term-missing"
